# SigViewer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
sigparser/: flirtparser.cpp  flirtparser.h
